--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,19 +20,19 @@
 					<a href="/">Home <span class="sr-only">(current)</span></a>
 				</li>
         <li {% if page.url == "\about.html" %}class="active"{% endif %}>
-					<a href="/about.html">About</a>
+					<a href="{{ "/about.html" | prepend: site.baseurl }}">About</a>
 				</li>
         <li {% if page.url == "\sponsors.html" %}class="active"{% endif %}>
-					<a href="/sponsors.html">Sponsors</a>
+					<a href="{{ "/sponsors.html" | prepend: site.baseurl }}">Sponsors</a>
 				</li>
         <li {% if page.url == "\contact.html" %}class="active"{% endif %}>
-					<a href="/contact.html">Contact</a>
+					<a href="{{ "/contact.html" | prepend: site.baseurl }}">Contact</a>
 				</li>
         <li {% if page.url == "\host.html" %}class="active"{% endif %}>
-					<a href="/host.html">Host</a>
+					<a href="{{ "/host.html" | prepend: site.baseurl }}">Host</a>
 				</li>
         <li {% if page.url == "\apply.html" %}class="active"{% endif %}>
-					<a href="/apply.html" class="hg">Apply</a>
+					<a href="{{ "/apply.html" | prepend: site.baseurl }}" class="hg">Apply</a>
 				</li>
       </ul>
     </div><!-- /.navbar-collapse -->
