More tabs. Preliminary done.

--- a/_layouts/boxy.html
+++ b/_layouts/boxy.html
@@ -7,6 +7,7 @@
 
     {% include header.html %}
     <div class="background" style="background-image: url({{ "/images/IMG-20150508-WA0016.jpg" | prepend: site.baseurl }})"></div>
+    <div class="background" style="background-image: url({{ "/images/IMG-20150508-WA0012.jpg" | prepend: site.baseurl }})"></div>
 
     <div class="page-content">
       <div class="box-wrapper box-{{ page.box-layout }}">
