--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,22 +16,22 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li {% if page.url == "/" %}class="active"{% endif %}>
-					<a href="/">Home <span class="sr-only">(current)</span></a>
+        <li {% if page.name == "index" %}class="active"{% endif %}>
+					<a href="{{ site.baseurl }}/">Home <span class="sr-only">(current)</span></a>
 				</li>
-        <li {% if page.url == "\about.html" %}class="active"{% endif %}>
+        <li {% if page.name == "about" %}class="active"{% endif %}>
 					<a href="{{ "/about.html" | prepend: site.baseurl }}">About</a>
 				</li>
-        <li {% if page.url == "\sponsors.html" %}class="active"{% endif %}>
+        <li {% if page.name == "sponsors" %}class="active"{% endif %}>
 					<a href="{{ "/sponsors.html" | prepend: site.baseurl }}">Sponsors</a>
 				</li>
-        <li {% if page.url == "\contact.html" %}class="active"{% endif %}>
+        <li {% if page.name == "contact" %}class="active"{% endif %}>
 					<a href="{{ "/contact.html" | prepend: site.baseurl }}">Contact</a>
 				</li>
-        <li {% if page.url == "\host.html" %}class="active"{% endif %}>
+        <li {% if page.name == "host" %}class="active"{% endif %}>
 					<a href="{{ "/host.html" | prepend: site.baseurl }}">Host</a>
 				</li>
-        <li {% if page.url == "\apply.html" %}class="active"{% endif %}>
+        <li {% if page.name == "apply" %}class="active"{% endif %}>
 					<a href="{{ "/apply.html" | prepend: site.baseurl }}" class="hg">Apply</a>
 				</li>
       </ul>
