--- a/css/main.scss
+++ b/css/main.scss
@@ -69,12 +69,6 @@ $on-laptop:        800px;
       margin-bottom: 30px;
       text-align: center;
 
-      h3 {
-        font-size: 15px;
-        color: #9b9b9b;
-        margin: 0;
-      }
-
       h1 {
         font-family: 'EB Garamond', serif;
         font-weight: bold;
@@ -85,10 +79,10 @@ $on-laptop:        800px;
       }
 
       .leaf {
-        position: absolute;
-        top: -10px;
+        display: inline;
+        top: 00px;
         width: 30px;
-        right: 10px;
+        right: 50px;
       }
     }
 
@@ -157,20 +151,21 @@ $on-laptop:        800px;
   .box-wrapper {
     position: absolute;
     width: 500px;
-    margin-top: 50px;
+    margin-top: 70px;
     margin-bottom: 50px;
   }
   
   .box-wrapper.box-main {
     position: absolute;
+    width: 450px;
     right: 10%;
-    padding: 70px 70px 40px;
+    padding: 80px 70px 40px;
   }
 
   .box-wrapper.box-text {
     position: absolute;
     left: 10%;
-    padding: 50px 30px 40px;
+    padding: 50px 40px 40px;
   }
 }
 
