--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
   <link rel="stylesheet" href="{{ "/bower_components/bootstrap/dist/css/bootstrap.min.css" | prepend: site.baseurl }}">
+  <script src="{{ "/bower_components/jquery/dist/jquery.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/bower_components/bootstrap/dist/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
 
 <link href='https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
