--- a/css/main.scss
+++ b/css/main.scss
@@ -147,6 +147,14 @@ $on-laptop:        800px;
   }
 }
 
+@media screen and (max-width: $on-laptop) {
+  .box-wrapper {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 30px 40px 30px;
+  }
+}
+
 @media screen and (min-width: $on-laptop) {
   .box-wrapper {
     position: absolute;
