--- a/css/main.scss
+++ b/css/main.scss
@@ -128,6 +128,7 @@ $on-laptop:        800px;
       font-size: 15px;
       color: #585858;
       margin-bottom: 30px;
+      text-transform: capitalize;
     }
 
     .details {
