--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,12 +22,20 @@
         <li {% if page.name == "about" %}class="active"{% endif %}>
 					<a href="{{ "/about.html" | prepend: site.baseurl }}">About</a>
 				</li>
+        <li {% if page.name == "schedule" %}class="active"{% endif %}>
+					<a href="{{ "/schedule.html" | prepend: site.baseurl }}">Schedule</a>
+				</li>
         <li {% if page.name == "sponsors" %}class="active"{% endif %}>
 					<a href="{{ "/sponsors.html" | prepend: site.baseurl }}">Sponsors</a>
 				</li>
         <li {% if page.name == "contact" %}class="active"{% endif %}>
 					<a href="{{ "/contact.html" | prepend: site.baseurl }}">Contact</a>
 				</li>
+				<!--
+        <li {% if page.name == "team" %}class="active"{% endif %}>
+					<a href="{{ "/team.html" | prepend: site.baseurl }}">Team</a>
+				</li>
+				-->
         <li {% if page.name == "apply" %}class="active"{% endif %}>
 					<a href="{{ "/apply.html" | prepend: site.baseurl }}" class="hg">Apply</a>
 				</li>
