--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,14 @@
   <script src="{{ "/bower_components/jquery/dist/jquery.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/bower_components/bootstrap/dist/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
 
-<link href='https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat:400,700|Quicksand:300,400,700' rel='stylesheet' type='text/css'>
 
+  <!--
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/images/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+  -->
+  
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />  
 </head>
