--- a/_layouts/boxy.html
+++ b/_layouts/boxy.html
@@ -6,8 +6,26 @@
   <body>
 
     {% include header.html %}
-    <div class="background" style="background-image: url({{ "/images/IMG-20150508-WA0012.jpg" | prepend: site.baseurl }})"></div>
-    <div class="background" style="background-image: url({{ "/images/IMG-20150508-WA0016.jpg" | prepend: site.baseurl }})"></div>
+
+    {% comment %}
+
+      Hack to get random array element in Jekyll.
+      See http://ephotopros.com/2015/jekyll-randomizer-for-ads/.
+
+      {% for bg in site.data.bgs %}
+        <link rel="prefetch" href="{{ site.baseurl }}{{ bg.src }}" />
+      {% endfor %}
+
+      {% assign hours = site.time | date: "%S" | plus:100 %}
+      {% assign random = page.name.size+page.name | plus: hours | modulo: site.data.bgs.size %}
+      <div class="background" style="background-image: url({{ site.data.bgs[random].src | prepend: site.baseurl }})"></div>
+
+    {% endcomment %}
+
+    <script>
+    var bgs = {{ site.data.bgs | jsonify }};
+    document.write('<div class="background" style="background-image: url({{ site.baseurl }}'+bgs[Math.floor(Math.random()*bgs.length)].src+')"></div>');
+    </script>
 
     <div class="page-content">
       <div class="box-wrapper box-{{ page.box-layout }}">
