--- a/css/main.scss
+++ b/css/main.scss
@@ -76,17 +76,20 @@ $color-green: #206964;
         font-family: 'EB Garamond', serif;
         font-weight: bold;
         margin: 0;
-        font-size: 70px;
+        font-size: 4.5em;
         margin-bottom: 5px;
         color: #555555;
       }
-
       .leaf {
         display: inline;
         top: 00px;
         width: 30px;
         right: 50px;
       }
+    }
+
+    ul, p {
+      font-size: 14px;
     }
 
     p {
@@ -114,7 +117,7 @@ $color-green: #206964;
         font-family: 'EB Garamond', serif;
         font-weight: bold;
         margin: 0;
-        font-size: 70px;
+        font-size: 4.5em;
         margin-bottom: 5px;
         color: #555555;
       }
@@ -228,6 +231,18 @@ $color-green: #206964;
     margin-top: 40px;
     margin-bottom: 40px;
     padding: 30px 40px 30px;
+    border-radius: 0;
+    font-size: 12px;
+  }
+
+  .page-team .team-list > li {
+    .picture {
+      float: none;
+    }
+
+    .text {
+      padding-left: 0;
+    }
   }
 }
 
@@ -307,6 +322,16 @@ $color-green: #206964;
   }
 }
 
-.navbar-default .navbar-toggle .icon-bar {
-  color: white !important;
+.navbar-default .navbar-toggle {
+  border: none;
+  border-radius: 0;
+
+  .icon-bar {
+    background-color: white !important;
+  }
+
+  &:focus, &:hover {
+    background: rgba(0,0,0,.1) !important;
+  }
 }
+
