--- a/_layouts/container.html
+++ b/_layouts/container.html
@@ -6,8 +6,7 @@
   <body>
 
     {% include header.html %}
-    <div class="background" style="background-image: url({{ "/images/IMG-20150508-WA0012.jpg" | prepend: site.baseurl }})"></div>
-    <div class="background" style="background-image: url({{ "/images/IMG-20150508-WA0016.jpg" | prepend: site.baseurl }})"></div>
+    {% include background.html %}
 
     <div class="page-content">
       <div class="container-wrapper box-text">
