--- a/css/main.scss
+++ b/css/main.scss
@@ -289,6 +289,19 @@ $color-green: #206964;
   background-size: cover;
 }
 
+.background-credits {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  font-size: 10px;
+  background: rgba(0,0,0,.1);
+  color: rgba(255,255,255,.5);
+  padding: 5px 10px;
+  text-transform: uppercase;
+
+  font-family: "Helvetica Neue", sans-serif;
+}
+
 .navbar {
   border-radius: 0 !important;
   background: $color-green !important;
