--- a/css/main.scss
+++ b/css/main.scss
@@ -88,6 +88,10 @@ $color-green: #206964;
       }
     }
 
+    li {
+      margin-bottom: 15px;
+    }
+
     ul, p {
       font-size: 14px;
     }
