--- a/css/main.scss
+++ b/css/main.scss
@@ -80,6 +80,7 @@ $color-green: #206964;
         margin-bottom: 5px;
         color: #555555;
       }
+
       .leaf {
         display: inline;
         top: 00px;
@@ -116,9 +117,22 @@ $color-green: #206964;
       position: relative;
       margin-bottom: 30px;
 
+      a {
+        text-decoration: none;
+        border-bottom: 1px solid #DDD;
+        color: inherit;
+        transition: .2s linear all;
+
+        &:hover {
+          color: #666;
+        }
+      }
+
       h3 {
         font-size: 15px;
         color: #9b9b9b;
+        z-index: 10;
+        position: relative;
         margin: 0;
       }
 
