--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
 					<a href="{{ "/team.html" | prepend: site.baseurl }}">Team</a>
 				</li>
         <li class="special {% if page.name == "apply.html" %} active{% endif %}">
-					<a href="{{ "/apply.html" | prepend: site.baseurl }}" class="hg">Apply</a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfE5sqpN6yMiXVcKdwjd87acoY2kpXvzBulFPiVC6KhFasMjw/viewform?c=0&w=1" class="hg">Apply</a>
 				</li>
       </ul>
     </div><!-- /.navbar-collapse -->
