--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,8 +20,11 @@
 					<a href="{{ site.baseurl }}/">Home</span></a>
 				</li>
         <li {% if page.name == "about.html" %}class="active"{% endif %}>
-					<a href="{{ "/about.html" | prepend: site.baseurl }}">About</a>
-				</li>
+          <a href="{{ "/about.html" | prepend: site.baseurl }}">About</a>
+        </li>
+        <li {% if page.name == "speakers.html" %}class="active"{% endif %}>
+          <a href="{{ "/speakers.html" | prepend: site.baseurl }}">Speakers</a>
+        </li>
         <li {% if page.name == "schedule.html" %}class="active"{% endif %}>
 					<a href="{{ "/schedule.html" | prepend: site.baseurl }}">Schedule</a>
 				</li>
