--- a/_layouts/boxy.html
+++ b/_layouts/boxy.html
@@ -14,5 +14,28 @@
       </div>
     </div>
 
+
+    <div class="ilsvideo">
+      <div class="frame">
+        <iframe src="" width="600" height="336" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+        <div class="close-btn" onClick="closeVideo()"></div>
+      </div>
+    </div>
+
+    <script>
+    function showVideo() {
+      if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+        window.open("https://www.facebook.com/theivycouncil/videos/1203055783050942/")
+      } else {
+        $(".ilsvideo").fadeIn();
+        $(".ilsvideo iframe").attr('src', 'https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ftheivycouncil%2Fvideos%2F1203055783050942%2F&width=600&show_text=false&appId=736115376531409&height=336');
+      }
+    }
+
+    function closeVideo() {
+      $(".ilsvideo").fadeOut();
+      $(".ilsvideo iframe").attr('src', '');
+    }
+    </script>
   </body>
 </html>
